[package]
name = "wkd-wasm-hello"
version = "0.1.0"
authors = ["wkd-development"]
edition = "2021"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
