[package]
name = "wkd-wasm-hello"
version = "0.1.0"
authors = ["wkd-development"]
edition = "2021"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/wkddevelopment/wkd-wasm-hello"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
